objects/APTS_Dynamic_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Frequency_French_Display__c</fullName>
        <formula>IF(  NOT( ISBLANK( APTS_Billing_Frequency__c ) )  ,  CASE(APTS_Billing_Frequency__c, &apos;Monthly&apos;, &apos;Mensuel&apos;, &apos;Yearly&apos;, &apos;Annuel&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>Billing Frequency French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Discount_Number__c</fullName>
        <description>Field to convert Bridge Discount field from text to number</description>
        <formula>VALUE( APTS_Bridge_Discount__c )</formula>
        <label>Bridge Discount Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Discount__c</fullName>
        <label>Bridge Discount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Length__c</fullName>
        <label>Bridge Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Monthly_Charges__c</fullName>
        <description>Field to calculate Bridge Monthly Changes</description>
        <formula>IF(TEXT(APTS_Quote_Proposal__r.APTS_Proposal_Business_Unit__c) = &apos;Canada&apos; &amp;&amp; APTS_Billing_Frequency__c = &apos;Yearly&apos; ,
IF(NOT(ISBLANK(APTS_Bridge_Discount_Number__c)),(APTS_Base_Price__c/12 - (APTS_Base_Price__c/12 * (APTS_Bridge_Discount_Number__c/100))),null),
IF(NOT(ISBLANK(APTS_Bridge_Discount_Number__c)), (APTS_Base_Price__c - (APTS_Base_Price__c * (APTS_Bridge_Discount_Number__c/100))),null))</formula>
        <label>Bridge Monthly Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge__c</fullName>
        <label>Bridge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bundle_Adjustment_Amount__c</fullName>
        <label>Bundle Adjustment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bundle_Adjustment_Type__c</fullName>
        <label>Bundle Adjustment Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bundle_Primary_Material__c</fullName>
        <label>Bundle Primary Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Bundle_Has_Bridge__c</fullName>
        <formula>(ISPICKVAL(APTS_Contract_Terms__c, &quot;Short Term Trial&quot;) &amp;&amp; APTS_Bridge_Length__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Bundle Has Bridge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number_of_Months__c</fullName>
        <label>Contract Number of Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Terms__c</fullName>
        <label>Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Deal_Number__c</fullName>
        <label>Deal Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Decentralized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decentralized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Agreement_Total__c</fullName>
        <label>Existing Agreement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Subscriptions_Total__c</fullName>
        <label>Existing Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Keep_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MLA_Agreement_Number__c</fullName>
        <label>MLA Agreement Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_New_Subscriptions_Total__c</fullName>
        <label>New Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Online_Incremental__c</fullName>
        <label>Online Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Program_ID__c</fullName>
        <label>Program ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Dynamic Bundles</relationshipLabel>
        <relationshipName>Dynamic_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_UoM__c</fullName>
        <label>UoM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EACH</fullName>
                    <default>true</default>
                    <label>EACH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YOY_Yr_2__c</fullName>
        <label>YOY % Yr 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YOY_Yr_3_5__c</fullName>
        <label>YOY % Yr 3-5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YOY_Yr_6_10__c</fullName>
        <label>YOY % Yr 6-10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YoY_1_Renewal__c</fullName>
        <label>YoY 1 Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YoY_2_Plus__c</fullName>
        <label>YoY 2 Plus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YoY_2_Plusdisplay__c</fullName>
        <formula>IF(AND(APTS_Contract_Number_of_Months__c &lt; 12,OR(TEXT(APTS_YoY_2_Plus__c)!=null,TEXT(APTS_YoY_2_Plus__c)==null)),&apos;&apos;, 
IF(AND(APTS_Contract_Number_of_Months__c &gt; 12,TEXT(APTS_YoY_2_Plus__c)!=null),TEXT(APTS_YoY_2_Plus__c)&amp;&quot;%&quot;, 
IF(AND(APTS_Contract_Number_of_Months__c = 12,OR(TEXT(APTS_YoY_2_Plus__c)!=null,TEXT(APTS_YoY_2_Plus__c)==null)),&apos;N/A&apos;, 
IF(AND(APTS_Contract_Number_of_Months__c &gt; 12,TEXT(APTS_YoY_2_Plus__c)== null),&apos;N/A&apos;,&apos;N/A&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YoY 2 Plus Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_isBLINotCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBLINotCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Number_w_o_comma__c</fullName>
        <formula>TEXT( APTS_Deal_Number__c )</formula>
        <label>Deal Number w/o comma</label>
        <type>Text</type>
    </fields>
    <label>Dynamic Bundle</label>
    <nameField>
        <label>Dynamic Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Bundles</pluralLabel>
    <recordTypes>
        <fullName>TR_Dynamic_Bundle_Record_Type</fullName>
        <active>true</active>
        <label>TR Dynamic Bundle Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>